--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=7.0.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7",
+    "phpunit/phpunit": "5.7"
   },
   "autoload": {
     "psr-0": {
